# PostCode-Address-Lookup

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  monitor_merge.sh  pyproject.toml  run.bat
backend/app/api/: deps.py  errors.py  main.py  middleware.py  run.py  schemas.py
backend/app/api/routers/: addresses.py  admin.py  apidocs.py  health.py  postcodes.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/core/db/: engine.py  loader.py  models.py
backend/app/core/db/migrations/: env.py
backend/app/core/db/migrations/versions/: 001_initial_schema.py  002_multi_source_enrichment.py  003_add_voa_ratings.py  004_add_trigram_indexes.py  005_add_pattern_and_composite_indexes.py  006_add_duplicate_of_column.py  f844d3523221_change_osm_id_to_bigint.py
backend/app/core/utils/: address.py  coordinates.py  postcode.py
backend/app/ingestion/: charity.py  cli.py  codepoint.py  companies_house.py  cqc.py  downloader.py  dvsa.py  epc.py  fsa.py  land_registry.py  merge.py  nhs.py  nspl.py  open_uprn.py  osm.py  schemas.py  schools.py  voa.py
backend/tests/: conftest.py
backend/tests/integration/: test_db.py
backend/tests/unit/: test_address_utils.py  test_companies_house_parser.py  test_coordinates.py  test_epc_parser.py  test_ingestion_schemas.py  test_land_registry_parser.py  test_open_uprn_parser.py  test_postcode_utils.py  test_voa_parser.py
deploy/: abbrev-dedup-diagnostic.sql  abbrev-dedup.sql  create-api-keys-tables.sql  cross-format-dedup.sql  (+9 more)
(+25 files in other folders)
