[project]
name = "postcode-lookup"
version = "0.1.0"
description = "UK Postcode Address Lookup — data ingestion pipeline and API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "geoalchemy2>=0.17",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "typer>=0.15",
    "httpx>=0.28",
    "pyproj>=3.7",
    "osmium>=4.0",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "rich>=13.9",
]

[project.scripts]
ingest = "app.ingestion.cli:app"
serve = "app.api.run:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.9",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
src = ["app", "tests"]
line-length = 100
